--- a/estilos/header.css
+++ b/estilos/header.css
@@ -72,5 +72,69 @@
     & .signup {
         font-size: 11px;
     }
+}
 
+.close {
+    display: none;
+}
+
+.mobile {
+    display: none;
+    align-items: center;
+}
+
+@media (max-width: 720px) {
+    .navbar {
+        position: fixed;
+        top: 0;
+        right: -500px;
+        width: 500px;
+        height: 100vh;
+        background-color: rgb(245, 253, 246);
+        box-shadow: 0 5px 8px rgba(0, 0, 0, 0.15);
+        padding: 60px 0 0 10px;
+        transition: 0.3s;
+    }
+
+    .navbar ul {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+
+        & li {
+            margin-bottom: 25px;
+        }
+    }
+
+    .active {
+        right: -300px;
+    }
+
+    .close {
+        display: initial;
+        position: absolute;
+        top: 20px;
+        left: 30px;
+        color: #1a1a1a;
+        font-size: 16px;
+    }
+
+    .mobile {
+        display: flex;
+        font-size: 20px;
+
+        & i {
+            color: #1a1a1a;
+            transition: 0.3s;
+            padding-left: 22px;
+        }
+
+        & i:hover {
+        color: #ff0000;
+        }
+    }
+
+    .productos > h2 {
+        font-size: 24px;
+    }
 }
